Перевод всех сохранения всех параметров шаблона на Debounce. Добавление в интерфейс управления проектными параметрами и ролями в рамках управления шаблонами проектов для Scrum и Kanban
